@@ -8,7 +8,7 @@ Proc::tored - Service management using a pid file and touch files
 
 =head1 VERSION
 
-version 0.07
+version 0.08
 
 =head1 SYNOPSIS
 
