@@ -1,4 +1,5 @@
 {{$NEXT}}
+- Replaced Running role with Flag class using touch file
 
 0.07 2017-02-18
 - Fixed serious bug causing pid file to be removed when a forked process exits
